--- a/estilos.css
+++ b/estilos.css
@@ -165,14 +165,19 @@ font-family: poppins;
 @media (max-width: 1150px){
     .contenedor{
         margin: 0%;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr ;
         justify-items: center;
         justify-content: center;
     }
     
+    .contenedor3{
+        grid-column: 1/5;
+        grid-row: 2/3;
+        width: 300px;
+    }
     #pedido{
         height: 100px;
-        width: 500px;
+        width: 300px;
         
         grid-column: 1/5;
         grid-row: 1/2;
@@ -225,11 +230,7 @@ font-family: poppins;
         font-size: 20px;
         
     }
-    .contenedor3{
-        grid-column: 1/5;
-        grid-row: 3/4;
-        width: 300px;
-    }
+    
     
     
 }
