--- a/estiloslogin.css
+++ b/estiloslogin.css
@@ -1,23 +1,12 @@
-body{
-    background-color: #2F2E41;
-    color: white;
-    font-family: poppins;
-    font-weight: 300;
 
-    display: grid; 
-    grid-auto-columns: 1fr; 
-    grid-template-rows: 40% 90px 90px 40%; 
-    gap: 3% 0%; 
-}
-
-#buscador{
+#codigoderastreo{
     background-color: #CECECE;
     width: 639px;
     border-radius: 40px;
     text-decoration: none;
     font-size: 30px;
     text-align: center;
-    grid-row: 2/3;
+    grid-row: 1/2;
 }
 
 #boton{
