--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,9 @@ margin: 0;
 padding: 0;
 font-family: poppins;
 }
+body{
+    background-color: #ededed;
+}
 #contenedor1 h1{
     font-weight: 300;
     font-size: 20px;
@@ -50,7 +53,7 @@ font-family: poppins;
     width: 639px;
     height: 50px;
     border-radius: 50px;
-    background: #f3f2f2;
+    background: #ededed;
     box-shadow: inset 20px 20px 60px #cfcece,
                 inset -20px -20px 60px #ffffff;
                 border: none;
@@ -78,7 +81,7 @@ font-family: poppins;
     grid-column: 1/2;
     margin-top: 50px;
     border-radius: 10px;
-    background: #ffffff;
+    background: #ededed;
     box-shadow:  20px 20px 60px #d9d9d9,
                 -20px -20px 60px #ffffff;
     transition: 1s;
@@ -91,7 +94,7 @@ font-family: poppins;
     grid-column: 2/3;
     margin-top: 50px;
     border-radius: 10px;
-    background: #ffffff;
+    background: #ededed;
     box-shadow:  20px 20px 60px #d9d9d9,
                 -20px -20px 60px #ffffff;
     transition: 1s;
@@ -104,7 +107,7 @@ font-family: poppins;
     grid-column: 3/4;
     margin-top: 50px;
     border-radius: 10px;
-    background: #ffffff;
+    background: #ededed;
     box-shadow:  20px 20px 60px #d9d9d9,
                 -20px -20px 60px #ffffff;
     transition: 1s;
@@ -118,7 +121,7 @@ font-family: poppins;
     margin-right: 40px;
     margin-top: 50px;
     border-radius: 10px;
-    background: #ffffff;
+    background: #ededed;
     box-shadow:  20px 20px 60px #d9d9d9,
                 -20px -20px 60px #ffffff;
     transition: 1s;
@@ -126,7 +129,7 @@ font-family: poppins;
 }
 
 .contenedor2{
-    background: #ffffff;
+    background: #ededed;
     box-shadow: inset 20px 20px 60px #d9d9d9,
             inset -20px -20px 60px #ffffff;
     grid-column: 2/4;
@@ -149,7 +152,7 @@ font-family: poppins;
    
     margin-top: 60px;
     border-radius: 30px;
-    background: #ffffff;
+    background: #ededed;
     box-shadow:  20px 20px 60px #d9d9d9,
              -20px -20px 60px #ffffff;
     display: grid; 
