actualizacion de enimaciones

--- a/estilos.css
+++ b/estilos.css
@@ -1,312 +1,7 @@
-*{
-margin: 0;
-padding: 0;
-font-family: poppins;
-}
-body{
-    background-color: #ededed;
-}
-#contenedor1 h1{
-    font-weight: 300;
-    font-size: 20px;
-    margin-top: 20px;
-    margin-left: 5%;
-    color: black;
-}
-#contenedor1 h2{
-    font-weight: 500;
-    font-size: 26px;
+#boton:hover{
     margin-top: 10px;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: black;
-    font-weight: 300;
-}
-.contenedor{
-    margin: 50px 64px 0px 64px;
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr 1fr; 
-    grid-template-rows: 200px 300px 30px 530px; 
-    gap: 0px 0px; 
-}
-
-#contenedor1{
-    grid-row: 2/3;
-    grid-column: 1/5;
-    display: grid; 
-    grid-template-columns: auto auto auto auto; 
-    gap: 0px 50px; 
-}
-
-.buscador{
-    grid-column: 1/5;
-    grid-row: 1/2;
-    display: grid;
-    grid-template-rows: 100px 100px;
-    justify-content: center;
-    justify-items: center;
-
-}
-
-#codigoderastreo{
-    background-color: #f3f2f2;
-    width: 639px;
-    height: 50px;
-    border-radius: 50px;
-    background: #ededed;
-    box-shadow: inset 20px 20px 60px #cfcece,
-                inset -20px -20px 60px #ffffff;
-                border: none;
-    text-decoration: none;
-    font-size: 20px;
-    text-align: center;
-    grid-row: 1/2;
-}
-#boton{
-    width: 297px;
-    height: 50px;
-    border-radius: 50px;
-    background: linear-gradient(145deg, #ffffff, #e6e6e6);
-    box-shadow:  20px 20px 60px #d9d9d9,
-                -20px -20px 60px #ffffff;
-    border: none;
-    grid-row: 2/3;
-}
-
-
-
-
-#pedido{
-    height: 150px;
-    grid-column: 1/2;
-    margin-top: 50px;
-    border-radius: 10px;
-    background: #ededed;
-    box-shadow:  20px 20px 60px #d9d9d9,
-                -20px -20px 60px #ffffff;
-    transition: 1s;
-}
-
-
-#cliente{
-    height: 150px;
-    background-color: #80A2D5;
-    grid-column: 2/3;
-    margin-top: 50px;
-    border-radius: 10px;
-    background: #ededed;
-    box-shadow:  20px 20px 60px #d9d9d9,
-                -20px -20px 60px #ffffff;
-    transition: 1s;
     
 }
 
-#empresa{
-    height: 150px;
-    background-color:#80A2D5;
-    grid-column: 3/4;
-    margin-top: 50px;
-    border-radius: 10px;
-    background: #ededed;
-    box-shadow:  20px 20px 60px #d9d9d9,
-                -20px -20px 60px #ffffff;
-    transition: 1s;
-
-}
-
-#formadepago{
-    height: 150px;
-    background-color: #80A2D5;
-    grid-column: 4/5;
-    margin-right: 40px;
-    margin-top: 50px;
-    border-radius: 10px;
-    background: #ededed;
-    box-shadow:  20px 20px 60px #d9d9d9,
-                -20px -20px 60px #ffffff;
-    transition: 1s;
-    
-}
-
-.contenedor2{
-    background: #ededed;
-    box-shadow: inset 20px 20px 60px #d9d9d9,
-            inset -20px -20px 60px #ffffff;
-    grid-column: 2/4;
-    grid-row: 3/4;
-    display: grid; 
-  grid-auto-columns: 1fr; 
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;  
-  gap: 0px 0px;   border-radius: 33px;
-}
-
-#barra{
-    
-    border-radius: 33px;
-    transition: 2s;
-}
-
-.contenedor3{
-    grid-column: 2/4;
-    grid-row: 4/5;
-   
-    margin-top: 60px;
-    border-radius: 30px;
-    background: #ededed;
-    box-shadow:  20px 20px 60px #d9d9d9,
-             -20px -20px 60px #ffffff;
-    display: grid; 
-    grid-template-columns: auto auto auto; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; 
-    gap: 0% 5%; 
-    padding: 5%;
-  
-}
-
-#titulo{
-    grid-column: 1/2;
-    font-weight: 300;
-    font-size: 20px;
-    color: #727272;
-}
-#autorizacion{
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-#autorizacionfecha{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-#diseño{
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-
-#diseñofecha{
-    grid-column: 2/3;
-    grid-row: 3/4;
-}
-
-#impresion{
-    grid-column: 1/2;
-    grid-row: 4/5;
-}
-#impresionfecha{
-    grid-column: 2/3;
-    grid-row: 4/5;
-}
-
-#taller{
-    grid-column: 1/2;
-    grid-row: 5/6;
-}
-
-#tallerfecha{
-    grid-column: 2/3;
-    grid-row: 5/6;
-}
-
-#entrega{
-    grid-column: 1/2;
-    grid-row: 6/7;
-}
-#entregafecha{
-    grid-column: 2/3;
-    grid-row: 6/7;
-}
 
 
-
-
-
-
-
-
-
-@media (max-width: 1150px){
-    .contenedor{
-        margin: 0%;
-        grid-template-rows: 300px 1fr 1fr 1fr;
-        justify-items: center;
-        justify-content: center;
-    }
-
-    .buscador{
-        grid-row: 1/2;
-        margin-top: 100px;
-    }
-    #codigoderastreo{
-        height: 40px;
-        width: 300px;
-    }
-
-    #contenedor1{
-        grid-row: 2/3;
-    }
-    
-    
-    .contenedor3{
-        grid-column: 1/5;
-        grid-row: 3/4;
-        width: 300px;
-    }
-    #pedido{
-        height: 100px;
-        width: 300px;
-        
-        grid-column: 1/5;
-        grid-row: 1/2;
-    }
-    #pedido h1{
-        font-size: 15px;
-        
-    }
-    #pedido h2{
-        font-size: 20px;
-        
-    }
-
-    #cliente{
-        grid-column: 1/5;
-    }
-    #cliente h1{
-        font-size: 15px;
-        
-    }
-    #cliente h2{
-        font-size: 20px;
-        
-    }
-    #empresa{
-        height: 100px;
-        
-        grid-column: 1/5;
-        grid-row: 3/4;
-    }
-    #empresa h1{
-        font-size: 15px;
-        
-    }
-    #empresa h2{
-        font-size: 20px;
-        
-    }
-
-    #formadepago{
-        height: 100px;
-        grid-column: 1/5;
-        grid-row: 4/5;
-    }
-    #formadepago h1{
-        font-size: 15px;
-        
-    }
-    #formadepago h2{
-        font-size: 20px;
-        
-    }
-    
-    
-    
-}
